syntax = "proto2";

package rv.protos;

message GeoTiffFiles {
    repeated string uris = 1;
}

message RasterSource {
    oneof raster_source_type {
        GeoTiffFiles geotiff_files = 1;
    }
}
